- Changed action back to method.

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       <div class="contact-section">
         <form
           class="form-horizontal form-center"
-          action="POST"
+          method="POST"
           name="contact"
           data-netlify-recaptcha="true"
           data-netlify="true"
