--- a/index.html
+++ b/index.html
@@ -218,93 +218,57 @@
               Close
             </button>
           </div>
-        </div>
-        <!-- End of modal content -->
-      </div>
-      <!-- End of modal dialogue -->
-    </div>
-    <!-- End of modal fade -->
+        </div> <!-- End of modal content -->
+      </div> <!-- End of modal dialogue -->
+    </div> <!-- End of modal fade -->
 
     <!-- Beginning of Contact Me section -->
     <section
       id="contactMe"
       class="content-section text-center"
-      style="padding-bottom: 5%; background-color: #333333;"
-    >
+      style="padding-bottom: 5%; background-color: #333333;">
       <h2
-        style="text-align: center; padding-top: 2%; padding-bottom: 3%; color: #66FCF1; width: 100%"
-      >
+        style="text-align: center; padding-top: 2%; padding-bottom: 3%; color: #66FCF1; width: 100%">
         <b>Lets Chat!</b>
       </h2>
       <div class="contact-section">
-        <form
+        <form 
           class="form-horizontal form-center"
           method="POST"
           name="contact"
           data-netlify-recaptcha="true"
-          data-netlify="true"
-        >
+          data-netlify="true">
           <div class="form-group">
-            <label style="color: #66FCF1;" for="nameInput"></label>
             <input
               required="true"
               type="text"
               class="form-control"
-              id="nameInput"
               placeholder="Your Name"
               name="name"
             />
-          </div>
-          <input type="hidden" name="_next" value="MessageSent.html" />
-          <div class="form-group">
-            <label style="color: #66FCF1;" for="emailInput"></label>
-            <input
-              required="true"
-              type="email"
-              class="form-control"
-              id="emailInput"
-              placeholder="xxxxx@xxxx.com"
-              name="_replyto"
-            />
-          </div>
-          <div class="form-group ">
-            <label style="color: #66FCF1;" for="textArea"></label>
-            <textarea
-              required="true"
-              class="form-control"
-              id="textArea"
-              placeholder="Description"
-              name="message"
-            ></textarea>
-          </div>
-          <button type="submit" class="btn btn-default">Send Message</button>
-        </form>
-
-        <form name="contact" method="POST" data-netlify="true">
-            <p>
-              <label>Your Name: <input type="text" name="name" /></label>   
-            </p>
-            <p>
-              <label>Your Email: <input type="email" name="email" /></label>
-            </p>
-            <p>
-              <label>Your Role: <select name="role[]" multiple>
-                <option value="leader">Leader</option>
-                <option value="follower">Follower</option>
-              </select></label>
-            </p>
-            <p>
-              <label>Message: <textarea name="message"></textarea></label>
-            </p>
-            <p>
-              <button type="submit">Send</button>
-            </p>
+            <br>
+            <div class="form-group">
+              <input
+                required="true"
+                type="email"
+                class="form-control"
+                placeholder="xxxxx@xxxx.com"
+              />
+            </div>
+            <br>
+            <div class="form-group">
+              <textarea
+                required="true"
+                class="form-control"
+                placeholder="Message Description..."
+                name="message">
+              </textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Send Message</button>
           </form>
-      </div>
-      <!-- end of contact-section -->
-    </section>
-    <!-- End of section -->
-
+      </div> <!-- end of contact-section -->
+    </section> <!-- End of section -->
+    
     <!-- Social media bar -->
     <div
       class="container-fluid"
