- added test form

--- a/index.html
+++ b/index.html
@@ -266,6 +266,21 @@
             </div>
             <button type="submit" class="btn btn-default">Send Message</button>
           </form>
+
+          <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
+              <p>
+                <label>Your Name: <input type="text" name="name" /></label>   
+              </p>
+              <p>
+                <label>Your Email: <input type="email" name="email" /></label>
+              </p>
+              <p>
+                <label>Message: <textarea name="message"></textarea></label>
+              </p>
+              <p>
+                <button type="submit">Send</button>
+              </p>
+            </form>
       </div> <!-- end of contact-section -->
     </section> <!-- End of section -->
     
