--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <button type="submit" class="btn btn-default">Send Message</button>
           </form>
 
-          <form name="contact" method="POST" data-netlify="true">
+          <form name="contacttest" method="POST" data-netlify="true">
               <p>
                 <label>Your Name: <input type="text" name="name" /></label>   
               </p>
