--- a/index.html
+++ b/index.html
@@ -267,12 +267,18 @@
             <button type="submit" class="btn btn-default">Send Message</button>
           </form>
 
-          <form name="contacttest" method="POST" data-netlify="true">
+          <form name="contact2" method="POST" data-netlify="true">
               <p>
                 <label>Your Name: <input type="text" name="name" /></label>   
               </p>
               <p>
                 <label>Your Email: <input type="email" name="email" /></label>
+              </p>
+              <p>
+                <label>Your Role: <select name="role[]" multiple>
+                  <option value="leader">Leader</option>
+                  <option value="follower">Follower</option>
+                </select></label>
               </p>
               <p>
                 <label>Message: <textarea name="message"></textarea></label>
