- Testing both forms

--- a/index.html
+++ b/index.html
@@ -236,7 +236,6 @@
           class="form-horizontal form-center"
           method="POST"
           name="contact"
-          data-netlify-recaptcha="true"
           data-netlify="true">
           <div class="form-group">
             <input
@@ -251,6 +250,7 @@
               <input
                 required="true"
                 type="email"
+                name="email"
                 class="form-control"
                 placeholder="xxxxx@xxxx.com"
               />
