- Navbar    - Changed logo    - Changed color

--- a/Projects.html
+++ b/Projects.html
@@ -31,7 +31,7 @@
       <div class="page" id="Home">
         <img
           src="img/England-Overlay-Logo-Caption.png"
-          class="img-fluid"
+          class="img-fluid banner banner-overlay"
           alt="Overlay image of England"
           style="padding-top: 3%; max-width: 100%; height: auto;"
         />
