--- a/MessageSent.html
+++ b/MessageSent.html
@@ -27,24 +27,22 @@
 
   <body>
     <!-- Jumbotron with background -->
-    <div class="jumbotron-fluid banner-background">
+    <div class="jumbotron banner-background" style="color: white;">
       <!-- Overlay image -->
-      <div class="banner-overlay">
+      <div class="banner-overlay" >
         <!-- Message and go back button -->
         <div class="container" style="margin-top: 10%;">
           <h1 class="display-3" style="margin-top: 5%">
             <b>Thanks for Reaching Out</b>
           </h1>
-          <p style="font-size: 1.5rem;">
+          <p style="font-size: 1.5em">
             I'll be in contact with you as soon as I can!
           </p>
           <a
             class="btn btn-dark btn-lg"
             href="index.html"
             role="button"
-            style="margin-top: 2%;
-            "
-          >
+            style="margin-top: 2%;">
             Go Back
           </a>
         </div>
