--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <!-- 
-   Color Scheme:
-   
-   Black: #0B0C10 
-   Navy Blue: #1F2833 
-   Grey: #C5C6C7 
-   Teal: #66FCF1 
-   Dark Teal: #45A29E
+    Color Scheme:
+
+    Black: #000000
+    INK: #062F4F
+    POSY: #813772
+    EMBERS: #B82601
    -->
 
   <head>
@@ -30,7 +29,6 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="css/index.css"
       href="css/main.css"
     />
   </head>
@@ -39,33 +37,15 @@
     style="background-color: #1F2833"
     data-spy="scroll"
     data-target=".navbar"
-    data-offset="100"
-  >
-    <header>
-      <!-- Overlay image -->
-      <div class="page" id="Home">
-        <img
-          src="img/England-Overlay-Logo-Caption.png"
-          class="img-fluid"
-          alt="Overlay image of England"
-          style="padding-top: 3%; max-width: 100%; height: auto;"
-        />
-      </div>
-      <!-- Page Home -->
-    </header>
-    <!-- End of header elements -->
+    data-offset="100">
 
     <!-- Navigation bar with logo and toggle for collapsing -->
-    <nav
-      class="navbar navbar-expand-md navbar-dark bg-company-red fixed-top"
-      style="background-color: #333333"
-    >
+    <nav class="navbar navbar-expand-md bg-company-red navbar-dark fixed-top">
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#collapsibleNavbar"
-      >
+        data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -75,28 +55,25 @@
               id="homeButton"
               class="navbar-brand"
               href="#Home"
-              onmouseover="hover(homeButton, rocketColor);"
-              onmouseout="unhover(homeButton, rocketColor);"
-              style="color: #C5C6C7; font-size: 17px;"
-            >
+              onmouseover="hover(logoColor);"
+              onmouseout="unhover(logoColor);">
               <img
-                id="rocketColor"
-                src="img/animation/Rocket.png"
-                alt="Home Button"
-                style="height: 40px; width:50px;"
-              />
-              Home
+                class="logoNavbar"
+                id="logoColor"
+                src="img/icon/BLACK.png"
+                alt="Home Button"/>
             </a>
           </li>
         </ul>
-        <ul class="nav navbar-nav ml-auto" style="color: #C5C6C7;">
+        <ul class="nav navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#AboutMe" data-offset="100">About Me</a>
+              <a class="nav-link" href="Projects.html" data-offset="100"><b>Project Examples</b></a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#AboutMe" data-offset="100"><b>About Me</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contactMe" data-offset="100"
-              >Contact Me</a
-            >
+            <a class="nav-link" href="#contactMe" data-offset="100"><b>Contact Me</b></a>
           </li>
         </ul>
       </div>
@@ -104,22 +81,30 @@
     </nav>
     <!-- End of Navigation bar -->
 
+
+    <!-- Page Home -->
+    <section id="Home">
+      <!-- Overlay image -->
+      <img
+        src="img/England-Jumbotron.jpg"
+        class="img-fluid banner-overlay"
+        alt="Overlay image of England">
+    </section> <!-- Page Home -->
+
     <!-- About me section start -->
     <section id="AboutMe">
       <div class="container-fluid" style="background-color: #C5C6C7;">
         <div class="row">
           <div
             class="col-lg-3 text-center"
-            style="background-color:#C5C6C7; padding-top: 3%"
-          >
+            style="background-color:#C5C6C7; padding-top: 10%">
             <!-- AboutMe Profile Image -->
             <img
               class="rounded-circle mx-auto d-block"
               src="img/about me/ProfilePic.jpg"
               alt="Watching the sunset in San Diego."
               width="270"
-              height="300"
-            />
+              height="300"/>
 
             <!-- Button to Open the Modal -->
             <button
@@ -130,19 +115,16 @@
               onmouseout="unhoverModal(modalColors);"
               class="btn btn-primary text-center"
               data-toggle="modal"
-              data-target="#myResumeModal"
-            >
+              data-target="#myResumeModal">
               Check out my Resume
             </button>
-          </div>
-          <!-- End of Image/Button Column -->
+          </div> <!-- End of Image/Button Column -->
 
           <div
             class="col-lg-9"
-            style="background-color:#C5C6C7; padding-left:4%; padding-right:4%;"
-          >
+            style="background-color:#C5C6C7; padding-left:4%; padding-right:4%;">
             <!-- About me paragraph -->
-            <h2 style="text-align: center; padding-top:2%; color: #1F2833;">
+            <h2 style="text-align: center; padding-top:10%; color: #1F2833;">
               <b>About Me</b>
             </h2>
             <p style="text-align: center; padding-top:2%;">
@@ -176,20 +158,17 @@
               <b>JavaScript Frameworks</b> such as <b>Springboot</b> and
               <b>Angular</b>.
             </p>
-            <P style="text-align: center;">
+            <P style="text-align: center; padding-bottom: 8%;">
               Feel free to use check out my resume below or use the contact form
               to reach out to me! You can also email me directly at
               <b>ReedStock1992@Gmail.com</b> or click the LinkedIn button at the
               bottom to connect with me.
             </P>
-          </div>
-          <!-- End of row -->
-        </div>
-        <!-- End of row -->
-      </div>
-      <!-- End of container-fluid -->
-    </section>
-    <!-- End of About Me section -->
+          </div> <!-- End of row -->
+        </div> <!-- End of row -->
+      </div> <!-- End of container-fluid -->
+    </section> <!-- End of About Me section -->
+    
 
     <!-- The Modal -->
     <div class="modal fade" id="myResumeModal">
@@ -226,15 +205,16 @@
     <section
       id="contactMe"
       class="content-section text-center"
-      style="padding-bottom: 5%; background-color: #333333;">
+      style=" padding-top: 5%; padding-bottom: 5%; background-color: #333333;">
       <h2
         style="text-align: center; padding-top: 2%; padding-bottom: 3%; color: #66FCF1; width: 100%">
         <b>Lets Chat!</b>
       </h2>
       <div class="contact-section">
-        <form 
+        <form
           class="form-horizontal form-center"
           method="POST"
+          action="MessageSent.html"
           name="contact"
           data-netlify="true">
           <div class="form-group">
@@ -243,8 +223,7 @@
               type="text"
               class="form-control"
               placeholder="Your Name"
-              name="name"
-            />
+              name="name"/>
             <br>
             <div class="form-group">
               <input
@@ -252,8 +231,7 @@
                 type="email"
                 name="email"
                 class="form-control"
-                placeholder="xxxxx@xxxx.com"
-              />
+                placeholder="xxxxx@xxxx.com"/>
             </div>
             <br>
             <div class="form-group">
@@ -261,26 +239,10 @@
                 required="true"
                 class="form-control"
                 placeholder="Message Description..."
-                name="message">
-              </textarea>
+                name="message"></textarea>
             </div>
-            <button type="submit" class="btn btn-default">Send Message</button>
+            <button type="submit" class="btn btn-dark">Send Message</button>
           </form>
-
-          <form name="contact2" method="POST" data-netlify="true">
-              <p>
-                <label>Your Name: <input type="text" name="name" /></label>   
-              </p>
-              <p>
-                <label>Your Email: <input type="email" name="email" /></label>
-              </p>
-              <p>
-                <label>Message: <textarea name="message"></textarea></label>
-              </p>
-              <p>
-                <button type="submit">Send</button>
-              </p>
-            </form>
       </div> <!-- end of contact-section -->
     </section> <!-- End of section -->
     
@@ -294,15 +256,12 @@
           <li>
             <a
               href="https://www.linkedin.com/in/reed-stock"
-              class="social-icon linkedIn-position"
-            >
+              class="social-icon linkedIn-position">
               <i class="fa fa-linkedin"></i> Link up with me!
             </a>
           </li>
         </ul>
-      </div>
-      <!-- End of social media footer -->
-    </div>
-    <!-- End of container-fluid -->
-  </body>
-</html>
+      </div> <!-- End of social media footer -->
+    </div> <!-- End of container-fluid -->
+  </body> <!-- End of body -->
+</html> <!-- End of html page-->
