- Banner    - Added new text    - Added new image    - Added overlay to image    - Added responsiveness to text

--- a/index.html
+++ b/index.html
@@ -84,11 +84,15 @@
 
     <!-- Page Home -->
     <section id="Home">
+      <div class="container-fluid banner-fluid">
       <!-- Overlay image -->
       <img
         src="img/England-Jumbotron.jpg"
-        class="img-fluid banner-overlay"
+        class="img-fluid banner"
         alt="Overlay image of England">
+        <h1 class="intro-centered display-1"><b>Hi, I'm Reed.</b></h1>
+        <h2 class="low-centered display-4">Software Engineer. Innovator. Free-Lancer.</h3>
+      </div>
     </section> <!-- Page Home -->
 
     <!-- About me section start -->
