- Work done on index.html    - Cleaning up classes for main.css

--- a/index.html
+++ b/index.html
@@ -34,16 +34,9 @@
   </head>
 
   <body
-  
-    style="background-color: #000000"
     data-spy="scroll"
     data-target=".navbar"
     data-offset="100">
-
-    <!-- Black: #000000
-    INK: #062F4F
-    POSY: #813772
-    EMBERS: #B82601 -->
 
     <!-- Navigation bar with logo and toggle for collapsing -->
     <nav class="navbar navbar-expand-md bg-company-red navbar-dark fixed-top">
@@ -94,7 +87,7 @@
       <!-- Overlay image -->
       <img
         src="img/England-Jumbotron.jpg"
-        class="img-fluid banner"
+        class="img-fluid banner-fluid"
         alt="Overlay image of England">
         <h1 class="intro-centered display-1"><b>Hi, I'm Reed.</b></h1>
         <h2 class="low-centered display-4">Software Engineer. Innovator. Self Starter. Self Learner.</h3>
@@ -111,7 +104,7 @@
     <!-- About me section start -->
     <section id="AboutMe">
       <div class="container-fluid">
-        <div class="row" style="background-color:#062F4F;">
+        <div class="row">
           <div
             class="col-lg-3 text-center"
             style=" padding-top: 10%">
