--- a/Projects.html
+++ b/Projects.html
@@ -39,16 +39,12 @@
       <!-- Page Home -->
     </header>
 
-    <nav
-      class="navbar navbar-expand-md navbar-dark bg-company-red fixed-top"
-      style="background-color: #333333"
-    >
+    <nav class="navbar navbar-expand-md navbar-dark bg-company-red fixed-top">
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#collapsibleNavbar"
-      >
+        data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
