- Deleted projects link (page still in works) - Deleted message page (page still in works) - Fixed coloring scheme (still need to find final color scheme) - Fixed responsiveness of text at top (still need to investigate better ways to do this)

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           </li>
         </ul>
         <ul class="nav navbar-nav ml-auto">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
               <a class="nav-link" href="Projects.html" data-offset="100"><b>Project Examples</b></a>
-            </li>
+            </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#AboutMe" data-offset="100"><b>About Me</b></a>
           </li>
@@ -83,14 +83,14 @@
 
     <!-- Page Home -->
     <section id="Home">
-      <div class="container-fluid banner-fluid">
+      <div class="container-fluid">
       <!-- Overlay image -->
       <img
         src="img/England-Jumbotron.jpg"
         class="img-fluid banner-fluid"
         alt="Overlay image of England">
-        <h1 class="intro-centered display-1"><b>Hi, I'm Reed.</b></h1>
-        <h2 class="low-centered display-4">Software Engineer. Innovator. Self Starter. Self Learner.</h3>
+        <h1 class="text-center display-2 intro-centered"><b>Hi, I'm Reed.</b></h1>
+        <h2 class="text-center display-4 low-centered">Software Engineer. Innovator. Self Starter. Self Learner.</h3>
       </div>
     </section> <!-- Page Home -->
 
@@ -107,7 +107,7 @@
         <div class="row">
           <div
             class="col-lg-3 text-center"
-            style=" padding-top: 10%">
+            style=" padding-top: 10%;">
             <!-- AboutMe Profile Image -->
             <img
               class="rounded-circle mx-auto d-block"
@@ -133,7 +133,7 @@
 
           <div
             class="col-lg-9"
-            style=" padding-left:4%; padding-right:4%; color:#813772;">
+            style=" padding-left:4%; padding-right:4%; color:white;">
             <!-- About me paragraph -->
             <h2 style="text-align: center; padding-top:10%;">
               <b>About Me</b>
@@ -220,14 +220,13 @@
       class="content-section text-center"
       style=" padding-top: 5%; padding-bottom: 5%; background-color: #000000;">
       <h2
-        style="text-align: center; padding-top: 2%; padding-bottom: 3%; color: #813772; width: 100%">
+        style="text-align: center; padding-top: 2%; padding-bottom: 3%; color: #B82601; width: 100%">
         <b>Lets Chat!</b>
       </h2>
       <div class="contact-section">
         <form
           class="form-horizontal form-center"
           method="POST"
-          action="MessageSent.html"
           name="contact"
           data-netlify="true">
           <div class="form-group">
@@ -262,7 +261,7 @@
     <!-- Social media bar -->
     <div
       class="container-fluid"
-      style="background-color: #813772; padding-top: 0.05%; padding-bottom: 0.05%;"
+      style="background-color: #062F4F; padding-top: 0.05%; padding-bottom: 0.05%;"
     >
       <div class="footer-social-icons">
         <ul class="social-icons">
